--- a/client/src/main.css
+++ b/client/src/main.css
@@ -5,7 +5,7 @@
 @import 'tailwindcss/utilities';
 
 .img-icon {
-    @apply w-16;
+    @apply w-16 h-16;
     image-rendering: pixelated;
     filter: drop-shadow(3px 3px 2px rgba(0, 0, 0, 0.2));
 }
